Updated Linter Configuration

--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -84,6 +84,7 @@ MD043:
   headings:
     - "# Awesome Unity Packages"
     - "## Animation and Tweening"
+    - "## Augmented and Virtual Reality"
   headers: []
 MD044:
   names: []
