Added new package categories

--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -85,6 +85,8 @@ MD043:
     - "# Awesome Unity Packages"
     - "## Animation and Tweening"
     - "## Augmented and Virtual Reality"
+    - "## Audio and Sound Systems"
+    - "## Asset and Resource Management"
   headers: []
 MD044:
   names: []
