Added new packages

--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -87,6 +87,8 @@ MD043:
     - "## Augmented and Virtual Reality"
     - "## Audio and Sound Systems"
     - "## Asset and Resource Management"
+    - "## Camera and Cinematic"
+    - "## Code and Component Generation"
   headers: []
 MD044:
   names: []
