Updated Linter Configuraiton

--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -87,6 +87,7 @@ MD043:
     - "## Asset and Resource Management"
     - "## Camera and Cinematic"
     - "## Code and Component Generation"
+    - "## Canvas and Graphical User Interfaces"
   headers: []
 MD044:
   names: []
