--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "awesome-unity-packages",
   "version": "1.0.1",
-  "description": "A hand-picked and curated list of delightful and awesome open-source Unity Packages.",
+  "description": "A frequently updated, hand-picked and curated list of delightful and awesome open-source Unity Packages.",
   "main": "README.md",
   "scripts": {
     "test": "markdownlint README.md"
